[package]
name = "yew-cosmo"
version = "0.15.10"
edition = "2021"
authors = ["Imanuel Ulbricht"]
homepage = "https://cosmo-yew.jinya.dev/"
license = "MIT"
description = "Yew Cosmo is an opinionated component library for yew based on the cosmopolitan design principles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { version = "0.7", features = ["helmet"] }
chrono = "0.4"
color-art = "0.3"
derive_more = "0.99"
gloo = "0.9"
stylist = { version = "0.12", features = ["yew", "yew_use_style"] }
uuid = { version = "1.4", features = ["js", "v4"] }
yew = "0.20"
yew-router = { version = "0.17", optional = true }
yew-hooks = "0.2"
yew_icons = { version = "0.7", optional = true }
web-sys = { version = "0.3", features = ["HtmlSelectElement", "Element"] }

[workspace]
members = [
    "docs"
]

[features]
default = ["with-yew-router", "with-icons", "with-lucide-icons"]
with-yew-router = ["dep:yew-router"]
with-icons = ["dep:yew_icons"]
with-bootstrap-icons = ["with-icons", "yew_icons?/bootstrap"]
with-lucide-icons = ["with-icons", "yew_icons?/lucide"]
with-font-awesome-icons = ["with-icons", "yew_icons?/font_awesome_regular", "yew_icons?/font_awesome_solid"]
with-octicons-icons = ["with-icons", "yew_icons?/octicons"]
with-heroicons-icons = ["with-icons", "yew_icons?/heroicons_outline", "yew_icons?/heroicons_solid", "yew_icons?/heroicons_mini_solid"]