[package]
name = "yew-cosmo"
version.workspace = true
edition.workspace = true
authors = ["Imanuel Ulbricht"]
homepage = "https://cosmo-yew.jinya.dev/"
license = "MIT"
description = "Yew Cosmo is an opinionated component library for yew based on the cosmopolitan design principles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { workspace = true }
chrono = { workspace = true }
color-art = { workspace = true }
derive_more = { workspace = true }
gloo = { workspace = true }
stylist = { workspace = true }
uuid = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true, optional = true }
yew-hooks = { workspace = true }
yew_icons = { workspace = true, optional = true }
web-sys = { workspace = true }

[workspace]
members = [
    "docs"
]

[workspace.package]
version = "0.15.21"
edition = "2021"

[workspace.dependencies]
bounce = { version = "0.*", features = ["helmet"] }
chrono = "0.*"
color-art = "0.*"
derive_more = "0.*"
gloo = "0.*"
stylist = { version = "0.*", features = ["yew", "yew_use_style"] }
uuid = { version = "1.*", features = ["js", "v4"] }
yew = "0.*"
yew-router = { version = "0.*" }
yew-hooks = "0.*"
yew_icons = { version = "0.*" }
web-sys = { version = "0.*", features = ["HtmlSelectElement", "Element", "DomRect"] }

[features]
default = ["with-yew-router", "with-icons", "with-lucide-icons"]
with-yew-router = ["dep:yew-router"]
with-icons = ["dep:yew_icons"]
with-bootstrap-icons = ["with-icons", "yew_icons?/bootstrap"]
with-lucide-icons = ["with-icons", "yew_icons?/lucide"]
with-font-awesome-icons = ["with-icons", "yew_icons?/font_awesome_regular", "yew_icons?/font_awesome_solid"]
with-octicons-icons = ["with-icons", "yew_icons?/octicons"]
with-heroicons-icons = ["with-icons", "yew_icons?/heroicons_outline", "yew_icons?/heroicons_solid", "yew_icons?/heroicons_mini_solid"]
