[package]
name = "yew-cosmo-docs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-cosmo = { path = "..", features = ["with-icons"] }

bounce = { version = "0.7.0", features = ["helmet"] }
stylist = { version = "0.12.1", features = ["yew", "yew_use_style"] }
yew = "0.20.0"
yew-router = "0.17.0"