[package]
name = "yew-cosmo-docs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-cosmo = { path = "..", features = ["with-icons"] }

bounce = { workspace = true }
stylist = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }